--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/Portfolio/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/Portfolio/MB/favicon-96x96.png" />
+    <link rel="icon" type="image/svg+xml" href="/Portfolio/MB/favicon.svg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/Portfolio/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/Portfolio/MB/web-app-manifest-192x192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/Portfolio/MB/web-app-manifest-512x512.png" />
+    <link rel="manifest" href="/Portfolio/MB/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Benítez Marcos - Desarrollador Web</title>
     <script type="text/javascript">
